# mutsu

./: .dockerignore  .gitignore  .gitmodules  .tagpr  AGENTS.md  ANALYSIS.md  BATTERIES.md  Buf:0x<C8>  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FIX_FLOW.md  HISTORY.tsv  I ♥ Raku  Makefile  PERFORMANCE.md  PLAN.md  README.md  S11modulesRakuLibTest.rakumod  TODO.md  TODO_eqv.md  TODO_parser.md  TODO_refactor_parser.md  TODO_roast.md  TODO_symbol_table.md  TODO_whitelist.md  _test_assertion_line_number.raku  _tmp-io-colon-invocant-2918632-28638.txt  async-print-tester  batteries-whitelist.txt  bench-history.tsv  file1  file2  flaky-tests.txt  lefthook.yml  ls.err  my-file.txt  roast-whitelist.txt  temp-evalfile.1444979.334  (+7 more)
TODO_dist/: TICKETS.md
TODO_roast/: BLOCKERS.md  MISC.md  S01.md  S02.md  S03.md  S04.md  S05.md  S06.md  S07.md  S09.md  S10.md  S11.md  S12.md  S13.md  S14.md  S15.md  S16.md  S17.md  S19.md  S22.md  S24.md  S26.md  S28.md  S29.md  S32.md  integration.md  raku-baseline.md  raku-baseline.tsv
benchmarks/: array-ops.raku  bench-array.raku  bench-class.raku  bench-ctor.raku  bench-fib.raku  bench-grammar-parse-deep.raku  bench-grammar-parse.raku  bench-hash.raku  bench-mandelbrot.raku  bench-startup.raku  bench-string.raku  bench-tak.raku  debug-guard.raku  fib.raku  hash-access.raku  int-arith.raku  method-call.raku  num-arith.raku  poly-call.raku  run-all.sh  run-benchmarks.sh  string-concat.raku  time-parts.raku  word-count.raku
docs/: baghash-bigint-plan.md  callframe-introspection-plan.md  captured-outer-cell-sharing.md  container-identity.md  dist-compat-sweep.md  doc-diff-backlog.md  ecosystem-guts-dependency-survey.md  element-element-bind-plan.md  env-locals-coherence.md  flaky-test-policy.md  gc-contents-mut-inventory.md  gc-level1-detailed-design.md  gc-post-3a-roadmap.md  gc.md  grammar-parse-gc-churn.md  hashdata-migration-plan.md  is-rw-shared-cell-plan.md  lazy-arrays.md  lexical-scope-slot-campaign.md  maintenance.md  mzef-install-pipeline.md  nanbox-3b0-api-wall.md  nanbox-3b1-step-b-design.md  opcode-design-review.md  param-binding-cells-plan.md  parser-improvement-plan.md  parser-opportunities-audit.md  parser-overview.md  perf-callpath-scouting.md  qa-doc-diff-harness.md  recursive-start-shared-vars.md  roast-grinding-procedure.md  s17-scheduler-supply-drive-model.md  scalar-array-sharing.md  seq-single-pass-consumption.md  slice-f-reverse-sync-deps.txt  slotref-removal-plan.md  treewalk-method-removal-plan.md  user-guide.md  vendoring.md  (+12 more)
news/: 2026-02.md  2026-03.md  2026-04.md  2026-05.md  2026-06.md  2026-07.md
old-design-docs/: S01-overview.pod  S02-bits.pod  S03-operators.pod  S04-control.pod  S05-regex.pod  S06-routines.pod  S09-data.pod  S10-packages.pod  S11-modules.pod  S12-objects.pod  S13-overloading.pod  S14-roles-and-parametric-types.pod  S16-io-OLD.pod  S16-io.pod  S28-special-names.pod  S29-functions.pod  S31-pragmatic-modules.pod
raku-doc/: type-graph.txt
roast/: spectest.data
scripts/: ai-fix-pr.sh  ai-fleet.sh  ai-next-roast.sh  ai-run-roast.sh  ai-sandbox.sh  ai-supervisor.sh  backfill-history-time.py  battery-testsuite.sh  bench-ci.sh  bench-visualize.py  check-flaky-list.sh  check-site-snippets.mjs  check-value-wall.sh  ci-flake-survey.sh  compare-ast.sh  dist-compat-sweep.py  dist-compat-tickets.py  doc-diff-harness.raku  doc-diff-sweep.sh  ecosystem-guts-survey.py  fix-roast.sh  flake-repro.sh  flaky-retry.sh  incus-setup.sh  method-coverage.raku  near-pass-scan.sh  pick-next-roast-easy.sh  pick-next-roast.sh  plot_roast_history.py  report-flaky-retries.sh  roast-history.sh  roast-raku-baseline.sh  roast-raku-check.sh  roast-speed-diff.sh  run-roast-test.sh  run-t-test.sh  stream-json-pretty.py  tmux-status.sh  update-vendor.sh
src/: ast.rs  builtins.rs  compiler.rs  doc_mode.rs  env.rs  error_render.rs  gc.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  opcode.rs  parse_dispatch.rs  parser.rs  precomp.rs  regex_validate.rs  repl.rs  repl_core.rs  runtime.rs  symbol.rs  token_kind.rs  trace.rs  value.rs  vm.rs
t/: accessor-fast-path.t  accessor-mro-shadowing.t  aliased-container-mutation.t  allomorph-numeric-compare.t  allomorph-param-type-check.t  allomorph-raku-gist.t  allomorph-range-endpoint.t  allomorphic-types.t  also-is-qualified-parent.t  amp-bracket-nested-metaop.t  amp-what-callable.t  ampersand-dot-accessor.t  and-not-loose-precedence.t  andthen-orelse-instance-rhs.t  andthen-roast-regressions.t  angle-bracket-hyphen.t  angle-list-numeric-words.t  angle-spaceship-quote-word.t  angle-subscript-ascii.t  angle-subscript-interpolation.t  angle-subscript-parens.t  (+2419 more)
(+1277 files in other folders)
