[package]
name = "mutsu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["rustyline", "libc"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
regex = "1.12.3"
fancy-regex = "0.14"
pcre2 = "0.2"
unicode_names2 = "2.0.0"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
unicode-segmentation = "1.12.0"
unicode-normalization = "0.1"
rustyline = { version = "15", optional = true }
emojis = "0.7"
libc = { version = "0.2", optional = true }
encoding_rs = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
debug = true
