[package]
name = "mutsu"
version = "0.1.2"
edition = "2024"
rust-version = "1.92.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["rustyline", "libc", "pcre2", "libloading", "libffi"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
# NativeCall (C FFI) support — gated under `native`; wasm builds cannot do FFI.
libloading = ["dep:libloading"]
libffi = ["dep:libffi"]

[dependencies]
regex = "1.12.3"
fancy-regex = "0.14"
pcre2 = { version = "0.2", optional = true }
unicode_names2 = "2.0.0"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
unicode-segmentation = "1.13.3"
unicode-normalization = "0.1"
rustyline = { version = "15", optional = true }
emojis = "0.7"
libc = { version = "0.2", optional = true }
encoding_rs = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
rustc-hash = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
icu_collator = "2.1"
icu_collator_data = "2.1"
libloading = { version = "0.8", optional = true }
libffi = { version = "3", optional = true }

[profile.release]
debug = true
