[package]
name = "mutsu"
version = "0.11.1"
edition = "2024"
rust-version = "1.94.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native", "jit"]
native = ["rustyline", "libc", "pcre2", "libloading", "libffi"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
# NativeCall (C FFI) support — gated under `native`; wasm builds cannot do FFI.
libloading = ["dep:libloading"]
libffi = ["dep:libffi"]
# Cranelift method JIT (ADR-0004, layer 4). Compiled in by default but inert
# unless MUTSU_JIT=on at runtime. Disable for targets Cranelift can't build on.
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

[dependencies]
regex = "1.12.3"
fancy-regex = "0.18"
pcre2 = { version = "0.2", optional = true }
unicode_names2 = "3"
num-bigint = { version = "0.5", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
unicode-segmentation = "1.13.3"
unicode-normalization = "0.1"
rustyline = { version = "18", optional = true }
emojis = "0.9"
libc = { version = "0.2", optional = true }
encoding_rs = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
rustc-hash = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
icu_collator = "2.1"
icu_collator_data = "2.1"
libloading = { version = "0.9", optional = true }
libffi = { version = "5", optional = true }
cranelift-codegen = { version = "0.133", optional = true }
cranelift-frontend = { version = "0.133", optional = true }
cranelift-jit = { version = "0.133", optional = true }
cranelift-module = { version = "0.133", optional = true }
cranelift-native = { version = "0.133", optional = true }

[profile.release]
# No debug info in release. Full debuginfo bloats the binary (~250MB vs ~27MB),
# slows codegen/linking by ~70s, and — accumulated across the local target/
# trees of several worktrees — costs hundreds of GB of disk. CI already forced
# this off via CARGO_PROFILE_RELEASE_DEBUG=false; making it the default aligns
# local `cargo build --release` (used by `make test`/`make roast`) with CI and
# keeps the release build fast.
debug = false

# For local profiling (`perf`, flamegraphs), build with `--profile profiling`:
# a release-optimized binary that keeps full debug symbols. This replaces the
# old `[profile.release] debug = true`, so profiling no longer taxes every
# ordinary release build.
[profile.profiling]
inherits = "release"
debug = true
